[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemy/sprites/enemy-2.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/sprites/enemy-1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/enemy/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/enemy/EnemyShoot.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Vertical",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 10 )

[node name="Enemy" type="Area2D" groups=[
"enemy",
]]
script = ExtResource( 3 )
Explosion = ExtResource( 4 )
EnemyShoot = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Vertical"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -13, -4, 26, 20 )

[node name="ExplosionSpawn" type="Position2D" parent="."]
position = Vector2( 0, 16 )

[node name="ShootSpawn" type="Position2D" parent="."]
position = Vector2( 0, 16 )

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
